objects/Setup_Logs__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <label>Display</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Id__c</fullName>
        <externalId>true</externalId>
        <label>Log Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Setup Logs</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Setup Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Setup_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Display__c</columns>
        <columns>Log_Id__c</columns>
        <columns>Section__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>